Fix: Setting the Direction to Row horizontal or Row reversed breaks the Accordion layout [ED-11388] (#23096)

--- a/modules/nested-accordion/assets/scss/frontend.scss
+++ b/modules/nested-accordion/assets/scss/frontend.scss
@@ -19,6 +19,7 @@
 	--n-accordion-icon-hover-color: var(--n-accordion-title-hover-color);
 	--n-accordion-icon-active-color: var(--n-accordion-title-active-color);
 	--n-accordion-icon-gap: 0 10px;
+	width: 100%;
 
 	.e-n-accordion {
 
